<resources>
    <string name="app_name">KorpusToken</string>
    <string name="localhost">localhost:29061</string>
    <string name="server_error">Не удалось соединиться с сервером</string>
    <string name="internet_error">Отсутствует подключение к интернету</string>

    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="auth_button">Войти</string>
    <string name="not_registered_auth">Не зарегистрированы?</string>
    <string name="registration_button">Зарегистрироваться</string>

    <string name="registration">Регистрация</string>
    <string name="sex">Пол</string>
    <string name="choose_team">Выберите команду в которой уже участвуете</string>
    <string name="email">Почта</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="tg_nickname">Никнейм в телеграм</string>
    <string name="sex_male">Мужской</string>
    <string name="sex_female">Женский</string>
    <string name="birth_date">Дата рождения</string>
    <string name="education">Образование</string>
    <string name="courses">Пройденные курсы</string>
    <string name="work_exp">Опыт работы</string>

    <string name="password_error">Пароли не совпадают</string>
    <string name="email_format_error">Неккоректный почтовый формат</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

</resources>
