<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            style="@style/TextEdit"
            android:background="@drawable/rounded_edittext"
            android:id="@+id/email_edit"
            android:layout_width="351dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textWebEmailAddress"
            android:hint="@string/email"/>

        <EditText
            style="@style/TextEdit"
            android:background="@drawable/rounded_edittext"
            android:id="@+id/login_edit"
            android:layout_width="351dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/email_edit"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/login" />

        <EditText
            style="@style/TextEdit"
            android:background="@drawable/rounded_edittext"
            android:id="@+id/password1_edit"
            android:layout_width="351dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_below="@id/login_edit"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <EditText
            style="@style/TextEdit"
            android:background="@drawable/rounded_edittext"
            android:id="@+id/password2_edit"
            android:layout_width="351dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_below="@id/password1_edit"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password_repeat"/>

        <EditText
            style="@style/TextEdit"
            android:background="@drawable/rounded_edittext"
            android:id="@+id/name_edit"
            android:layout_width="351dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_below="@id/password2_edit"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name" />

        <EditText
            style="@style/TextEdit"
            android:background="@drawable/rounded_edittext"
            android:id="@+id/surname_edit"
            android:layout_width="351dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_below="@id/name_edit"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/surname" />

        <EditText
            style="@style/TextEdit"
            android:background="@drawable/rounded_edittext"
            android:id="@+id/tg_nickname_edit"
            android:layout_width="351dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_below="@id/surname_edit"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/tg_nickname" />

        <TextView
            style="@style/Text.Main"
            android:id="@+id/sex_textview"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tg_nickname_edit"
            android:layout_marginTop="15dp"
            android:labelFor="@id/sex_radio_group"
            android:text="@string/sex"
            android:layout_centerHorizontal="true"/>

        <RadioGroup
            android:id="@+id/sex_radio_group"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_below="@id/sex_textview"
            android:checkedButton="@id/male_radio"
            android:padding="5dp">
            <RadioButton
                android:id="@+id/male_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sex_male" />
            <RadioButton
                android:id="@+id/female_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sex_female" />
        </RadioGroup>

        <TextView
            style="@style/Text.Main"
            android:id="@+id/birthdate_textview"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/sex_radio_group"
            android:layout_marginTop="15dp"
            android:labelFor="@id/birthdate_datepicker"
            android:text="@string/birth_date"
            android:layout_centerHorizontal="true"/>

        <DatePicker
            style="@style/Text.Main"
            android:id="@+id/birthdate_datepicker"
            android:layout_width="351dp"
            android:layout_height="100dp"
            android:layout_below="@id/birthdate_textview"
            android:layout_marginTop="15dp"
            android:spinnersShown="true"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_centerHorizontal="true"/>

        <TextView
            style="@style/Text.Main"
            android:id="@+id/team_textview"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/birthdate_datepicker"
            android:layout_marginTop="15dp"
            android:labelFor="@id/team_linear_parent_layout"
            android:text="@string/choose_team"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:id="@+id/team_linear_parent_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/team_textview"
            android:layout_margin="15dp">
            <androidx.core.widget.NestedScrollView
                android:id="@+id/team_scroll"
                android:layout_width="match_parent"
                android:layout_height="100dp">
                <LinearLayout
                    android:id="@+id/team_linear_child_layout"
                    android:layout_width="351dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

        <EditText
            style="@style/TextEdit"
            android:background="@drawable/rounded_edittext"
            android:id="@+id/education_edit"
            android:layout_width="351dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_below="@id/team_linear_parent_layout"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/education" />

        <EditText
            style="@style/TextEdit"
            android:background="@drawable/rounded_edittext"
            android:id="@+id/courses_edit"
            android:layout_width="351dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_below="@id/education_edit"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/courses" />

        <EditText
            style="@style/TextEdit"
            android:background="@drawable/rounded_edittext"
            android:id="@+id/work_exp_edit"
            android:layout_width="351dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:layout_below="@id/courses_edit"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/work_exp" />

        <Button
            style="@style/Button"
            android:background="@drawable/rounded_button"
            android:id="@+id/registration_button"
            android:layout_width="351dp"
            android:layout_height="45dp"
            android:layout_below="@id/work_exp_edit"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_centerHorizontal="true"
            android:text="@string/registration_button" />
    </RelativeLayout>
</ScrollView>